--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^0.24.0",
     "core-js": "^3.6.5",
     "moment": "^2.29.1",
+    "node-sass": "^6.0.1",
     "vue": "^3.2.1",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.2"
@@ -37,6 +38,8 @@
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0-0",
     "fork-ts-checker-webpack-plugin-v5": "npm:fork-ts-checker-webpack-plugin@^5.0.11",
+    "sass": "^1.49.8",
+    "sass-loader": "^10.2.1",
     "vue-jest": "^5.0.0-0",
     "vue-loader-v16": "npm:vue-loader@^16.1.0"
   },
