--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@capacitor/app": "1.0.6",
+    "@capacitor/camera": "^1.3.1",
     "@capacitor/core": "3.3.2",
     "@capacitor/haptics": "1.1.3",
     "@capacitor/keyboard": "1.1.3",
